--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "gsap": "^3.11.5",
     "sass": "^1.62.1",
+    "three": "^0.134.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@types/three": "^0.152.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
